# shl-assessment-recommender

./: .gitignore  README.md  app.py  gemini_utils.py  hello.py  main.py  pinecone_utils.py  pyproject.toml  scraper.py  utils.py
data/: individual_test_solutions.csv  individual_test_solutions_with_description.csv  prepackaged_job_solutions.csv  prepackaged_job_solutions_with_description.csv
